<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="30dp"
    android:paddingHorizontal="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/online_staff_title"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:textColor="?titleColor"
        />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/online">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_person_24"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:id="@+id/tv_onlineName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_staff_name"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
        </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/yellow"
        android:layout_marginTop="20dp"
        android:paddingVertical="36dp"
        android:paddingHorizontal="10dp">
        
        <TextView
            android:id="@+id/tv_onlineEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/online_staff_email"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_onlinePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/online_staff_phone"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/black"
            />
        
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_email"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/online_staff_email_btn"
            android:padding="16dp"
            android:layout_alignParentLeft="true"
            android:backgroundTint="@color/blue"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_call"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/online_staff_call_btn"
            android:padding="16dp"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/blue"
            android:textColor="@color/black"/>

    </RelativeLayout>

</LinearLayout>