<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/dwLayoutFaq"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tool:context=".FaqActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="30dp"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_title"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginBottom="50dp"
            android:layout_alignParentTop="true"
            android:textStyle="bold"
            android:textColor="?titleColor"
            />

        <TextView
            android:id="@+id/tv_faq_mockup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_mockup"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="?titleColor"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_create"
            android:layout_below="@+id/tv_faq_mockup"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="?titleColor"
            />

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navViewFaq"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/purple_500"
        app:itemTextColor="@color/white"
        app:itemTextAppearance="@style/MenuItems"
        />

</androidx.drawerlayout.widget.DrawerLayout>